--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "asciidoctor": "^3.0.4",
     "markdown-it": "^14.1.0",
     "markdown-it-front-matter": "^0.2.4",
+    "uuid": "^10.0.0",
     "yaml": "^2.6.0",
     "yargs": "^17.7.2"
   },
