--- a/templates.yaml
+++ b/templates.yaml
@@ -4,36 +4,38 @@ info:
   version: 1.0.0
 
 templates:                            # Array of templates, each with a unique key
-  How-to:                             # Initial template definition correspondings to the H1 level of the document
-    description: A template for how-to guides that include prerequisites, setup, usage, troubleshooting, and next steps sections.
-    paragraphs:
-      min: 2
-      max: 5
-    code_blocks:
-      max: 1                          # Allow a maximum of 1 code block
+  How-to:                             # Template definition correspondings to the H1 level of the document
     sections:                         # Array of sections, each with a unique key
-      Prerequisites:                  # Each section corresponds to a heading level one below the parent, in this case Prerequisites is an H2
-        title: 
-          const: Prerequisites          # Require the section to be titled "Prerequisites"
+      Introduction:                   # Each sections corresponds to a heading level one below the parent, starting with an H1 at the first level
+        description: A template for how-to guides that include prerequisites, setup, usage, troubleshooting, and next steps sections.
         paragraphs:
-          max: 3
-      Setup:
-        paragraphs:
-          max: 5                      # Allow a maximum of 5 paragraphs
-      Usage:
-        paragraphs:
-          max: 3
+          min: 2
+          max: 5
         code_blocks:
-          min: 1                      # Require at least one code block
-        additionalSections: true     # Allow additional use case sections
-        sections:
-          Troubleshooting:
+          max: 1                          # Allow a maximum of 1 code block
+        sections:                         # Array of sections, each with a unique key
+          Prerequisites:                  # Each section corresponds to a heading level one below the parent, in this case Prerequisites is an H2
             title: 
-              const: Troubleshooting    # Require the section to be titled "Troubleshooting"
+              const: Prerequisites          # Require the section to be titled "Prerequisites"
             paragraphs:
-              max: 5
-      Next steps:
-        $ref: '#/components/sections/Next steps'   # Reference the 'Next steps' section component
+              max: 3
+          Setup:
+            paragraphs:
+              max: 5                      # Allow a maximum of 5 paragraphs
+          Usage:
+            paragraphs:
+              max: 3
+            code_blocks:
+              min: 1                      # Require at least one code block
+            additionalSections: true     # Allow additional use case sections
+            sections:
+              Troubleshooting:
+                title: 
+                  const: Troubleshooting    # Require the section to be titled "Troubleshooting"
+                paragraphs:
+                  max: 5
+          Next steps:
+            $ref: '#/components/sections/Next steps'   # Reference the 'Next steps' section component
 
 components:
   sections:
