Replace `markdown-it` with `remark` in `src/markdownParser.js`
* Update `parseMarkdown` function to use `remark` to parse Markdown content
* Output an object based on the Markdown AST
* Update tests in `test/linter.test.js` to validate the structure of Markdown files using the updated `parseMarkdown` function
* Remove `markdown-it` and `markdown-it-front-matter` dependencies from `package-lock.json`
* Add `remark` and related dependencies to `package-lock.json`

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@apidevtools/json-schema-ref-parser": "^11.7.2",
     "ajv": "^8.17.1",
     "asciidoctor": "^3.0.4",
-    "markdown-it": "^14.1.0",
-    "markdown-it-front-matter": "^0.2.4",
+    "remark": "^15.0.1",
     "uuid": "^10.0.0",
     "yaml": "^2.6.0",
     "yargs": "^17.7.2"
