Update markdown parser to exclude lists from child processing and enforce minimum list requirements in templates

--- a/templates.yaml
+++ b/templates.yaml
@@ -78,4 +78,6 @@ components:
         const: Next steps             # Back to an H2 level section
       required: false               # Allow the section to be omitted
       paragraphs:
-        min: 2
+        min: 1
+      lists:
+        min: 1
