--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha 'src/**/*.test.js' 'test/**/*.test.js'"
+    "test": "mocha 'src/**/*.test.js'"
   },
   "author": "Manny Silva",
   "license": "MIT",
