--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha 'src/**/*.test.js'"
+    "test": "mocha 'src/**/*.test.js'",
+    "prepare": "husky"
   },
   "author": "Manny Silva",
   "license": "MIT",
