--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "devDependencies": {
     "chai": "^5.1.2",
     "husky": "^9.1.7",
-    "mocha": "^11.0.1"
+    "mocha": "^11.0.1",
+    "sinon": "^19.0.2"
   },
   "files": [
     "index.js",
