--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doc-structure-lint",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A tool to validate Markdown and AsciiDoc structure against a specified template",
   "bin": {
     "doc-structure-lint": "src/index.js"
@@ -15,9 +15,10 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^11.7.2",
+    "@apidevtools/json-schema-ref-parser": "^11.7.3",
     "ajv": "^8.17.1",
     "asciidoctor": "^3.0.4",
+    "node-llama-cpp": "^3.3.0",
     "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
     "uuid": "^11.0.3",
