--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "main": "src/index.js",
   "scripts": {
+    "postinstall": "node src/util/preloadModel.js",
+    "clean": "node src/util/tempDir.js clean",
     "start": "node src/index.js",
     "test": "mocha 'src/**/*.test.js'",
     "prepare": "husky"
