Add VS Code extension for real-time linting
Implement a VS Code extension for real-time linting during document editing for Markdown files.

* **New File `src/extension.ts`**:
  - Create a new file to implement the VS Code extension.
  - Register the extension with the VS Code API.
  - Add event listeners for document changes to trigger linting.
  - Integrate with the VS Code Problems panel to display linting errors.
  - Implement real-time linting for Markdown files using `doc-structure-lint`.

* **`package.json`**:
  - Update the `main` field to point to the new extension entry point.
  - Add `vscode` as a dependency for the VS Code extension.
  - Add a new script to build the VS Code extension.

* **`README.md`**:
  - Add instructions for setting up and using the VS Code extension.
  - Include details about the real-time linting feature.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "bin": {
     "doc-structure-lint": "src/index.js"
   },
-  "main": "src/index.js",
+  "main": "src/extension.ts",
   "scripts": {
     "postinstall": "node src/util/preloadModel.js",
     "clean": "node src/util/tempDir.js clean",
     "start": "node src/index.js",
     "test": "mocha 'src/**/*.test.js'",
-    "prepare": "husky"
+    "prepare": "husky",
+    "build": "tsc -p ./"
   },
   "author": "Manny Silva",
   "license": "MIT",
@@ -25,7 +26,8 @@
     "remark-frontmatter": "^5.0.0",
     "uuid": "^11.0.3",
     "yaml": "^2.6.1",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "vscode": "^1.1.37"
   },
   "devDependencies": {
     "chai": "^5.1.2",
